@@ -2,6 +2,7 @@ Overview of changes in lightdm 0.0.3
 
     * Add language selector API
     * Wait for signal from X server before starting session
+    * Add gettext support to WebKit greeter
 
 Overview of changes in lightdm 0.0.2
 
